Implement documentation of quizzes
